@@ -1,4 +1,7 @@
 2011-08-01 gabriel.oliveira
+* Fix add ung_knowledge_pad
+
+2011-08-01 gabriel.oliveira
 * Add ung listbox's knowledge_pad and related gadget
 
 2010-12-28 gabriel
